[tool.poetry]
name = "dsai-secret-demo"
version = "0.1.0"
description = "Demo Project for secret handling during local development with a .env file and during development in Databricks"
authors = ["Nikolaj Juul Madsen <nikolaj.madsen@lego.com>"]
readme = "README.md"
packages = [
    { include = "src" }
    ]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
